Styling changes to stop input and entries from overlapping

--- a/edurange_refactored/templates/student_view/components/group_chat_components/group_chat_entry/group_chat_entry.css
+++ b/edurange_refactored/templates/student_view/components/group_chat_components/group_chat_entry/group_chat_entry.css
@@ -22,11 +22,8 @@
 }
 
 .student_from_self_div, .student_from_other_div {
-    display: flex;
-    flex-direction: column;
     margin-bottom: 1rem;
     overflow: contain;
-    overflow-anchor: auto;
 }
 
 .student_from_self_name {
