--- a/edurange_refactored/templates/student_view/components/group_chat_components/group_chat_window/group_chat_window.css
+++ b/edurange_refactored/templates/student_view/components/group_chat_components/group_chat_window/group_chat_window.css
@@ -1,15 +1,5 @@
 #groupChatWindow {
-    max-height: 30vh;
-    overflow: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
-    overflow-anchor: none;
-    overflow-y: auto;
-    scrollbar-width: none;
 }
-
-
-#groupChatWindow ::-webkit-scrollbar  {
-    width: 0;
-    background: transparent;
-  }
